2006-08-04  Bastien Nocera  <hadess@hadess.net>

	* data/icons/16x16/Makefile.am:
	* data/icons/16x16/movie-player.png:
	* data/icons/16x16/totem.png:
	* data/icons/22x22/Makefile.am:
	* data/icons/22x22/movie-player.png:
	* data/icons/22x22/totem.png:
	* data/icons/24x24/Makefile.am:
	* data/icons/24x24/movie-player.png:
	* data/icons/24x24/totem.png:
	* data/icons/32x32/Makefile.am:
	* data/icons/32x32/movie-player.png:
	* data/icons/32x32/totem.png:
	* data/icons/scalable/Makefile.am:
	* data/icons/scalable/movie-player.svg:
	* data/icons/scalable/totem.svg:
	Rename the icons "totem" as originally intended

2006-08-04  Bastien Nocera  <hadess@hadess.net>

	* configure.in:
	* data/Makefile.am:
	* data/icons/.cvsignore:
	* data/icons/16x16/.cvsignore:
	* data/icons/16x16/Makefile.am:
	* data/icons/16x16/movie-player.png:
	* data/icons/22x22/.cvsignore:
	* data/icons/22x22/Makefile.am:
	* data/icons/22x22/movie-player.png:
	* data/icons/24x24/.cvsignore:
	* data/icons/24x24/Makefile.am:
	* data/icons/24x24/movie-player.png:
	* data/icons/32x32/.cvsignore:
	* data/icons/32x32/Makefile.am:
	* data/icons/32x32/movie-player.png:
	* data/icons/Makefile.am:
	* data/icons/scalable/.cvsignore:
	* data/icons/scalable/Makefile.am:
	* data/icons/scalable/movie-player.svg:
	* data/media-player-48.png:
	* data/totem.desktop.in.in.in:
	* src/totem-mozilla-viewer.c: (on_about1_activate):
	* src/totem.c: (on_about1_activate), (main):
	Use the new "movie-player" icons from Jakub Steiner
	<jimmac@ximian.com>, all themed as well

2006-08-03  Bastien Nocera  <hadess@hadess.net>

	* src/backend/bacon-video-widget-xine.c: (frame_output_cb):
	Pass saved coordinates to the xine-engine so it doesn't try to 
	redraw us when we're in logo mode, have already played a film, and
	we're moving the window (phew!)

2006-08-03  Bastien Nocera  <hadess@hadess.net>

	* src/backend/bacon-video-widget-xine.c:
	(bacon_video_widget_set_logo_mode),