@@ -3,7 +3,7 @@ Encoding=UTF-8
 _Name=Movie Player
 _Comment=Play movies and songs
 Exec=totem %U
-Icon=movie-player
+Icon=totem
 Terminal=false
 Type=Application
 Categories=GNOME;GTK;Application;AudioVideo;Player;X-Ximian-Main;X-Red-Hat-Base;
