@@ -1,5 +1,12 @@
 2006-08-04  Bastien Nocera  <hadess@hadess.net>
 
+	* data/totem.desktop.in.in.in:
+	* src/totem-mozilla-viewer.c: (on_about1_activate):
+	* src/totem.c: (on_about1_activate), (main): and change the users
+	of the icons appropriately
+
+2006-08-04  Bastien Nocera  <hadess@hadess.net>
+
 	* data/icons/16x16/Makefile.am:
 	* data/icons/16x16/movie-player.png:
 	* data/icons/16x16/totem.png:
